--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.data.mongodb.database=task
 spring.data.mongodb.repositories.enabled=true
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.uri=mongodb://localhost:27017
+
+
+#Valition
+spring.messages.basename=validation-messages
