Configurando consumo do client de localização

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.data.mongodb.uri=mongodb://localhost:27017
 
 #Valition
 spring.messages.basename=validation-messages
+
+#ViaCep
+via.cep.url=https://viacep.com.br/ws
