Criando fluxo start de tarefas no kafka, consumindo eventos e finalizando as tarefas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,14 @@ spring.messages.basename=validation-messages
 
 #ViaCep
 via.cep.url=https://viacep.com.br/ws
+
+# Kafka
+spring.kafka.bootstrap-servers=192.168.10.112:9092
+spring.cloud.stream.binder.broker=192.168.10.112:9092
+spring.cloud.stream.kafka.binder.auto-create-topics=true
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.tasks.model
+
+kafka.task.notification.output=task-notification-v1
+kafka.task.notification.group.id=task-notification-v1-group
