--- a/src/main/resources/validation-messages.properties
+++ b/src/main/resources/validation-messages.properties
@@ -4,3 +4,4 @@ size.title=O título deve ter entre 3 a 20 caracteres
 blank.description=Valor inválido para o campo Description
 size.description=A description deve ter entre 10 a 50 caracteres
 min.priority=A prioridade deve ser maior que zero
+blank.state=Valor inválido para o campo state
